--- a/profile.html
+++ b/profile.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 
   <h1>oba</h1>
   <h2>Welkom Arexan Kheyrdoon</h2>
-  <button type="button"></button>
+  <button class="btn">Reserveringen</button>
 
   <body>
     <div class="container">
@@ -21,34 +21,33 @@
 
       <div class="images">
         <div class="image-box" data-name="Mijn abonnement">
-          <img src="paper-texture-600w-210886981.jpg.webp" alt="" />
-
-          <h3>Mijn Abonnement</h3>
+          <img src="achtergrond-grijs.jpeg" alt="" />
+          <button class="btn">Abonnement</button>
         </div>
 
-        <div class="image-box" data-name="Skills Passport">
-          <img src="paper-texture-600w-210886981.jpg.webp" alt="" />
-          <h3>Leeromgeving</h3>
+        <div class="image-box" data-name="Leeromgeving">
+          <img src="achtergrond-grijs.jpeg" alt="" />
+          <button class="btn">Leeromgeving</button>
+        </div>
+
+        <div class="image-box" data-name="Skills Passpoort">
+          <img src="achtergrond-grijs.jpeg" alt="" />
+          <button class="btn">Skills Passport</button>
         </div>
 
         <div class="image-box" data-name="Boekentips">
-          <img src="paper-texture-600w-210886981.jpg.webp" alt="" />
-          <h3>Skills Passport</h3>
+          <img src="achtergrond-grijs.jpeg" alt="" />
+          <button class="btn">Boekentips</button>
         </div>
 
         <div class="image-box" data-name="Tickets">
-          <img src="paper-texture-600w-210886981.jpg.webp" alt="" />
-          <h3>Boekentips</h3>
+          <img src="achtergrond-grijs.jpeg" alt="" />
+          <button class="btn">Tickets</button>
         </div>
 
         <div class="image-box" data-name="Werkruimtes">
-          <img src="paper-texture-600w-210886981.jpg.webp" alt="" />
-          <h3>Tickets</h3>
-        </div>
-
-        <div class="image-box" data-name="Werkruimtes">
-          <img src="paper-texture-600w-210886981.jpg.webp" alt="" />
-          <h3>Werkruimtes</h3>
+          <img src="achtergrond-grijs.jpeg" alt="" />
+          <button class="btn">Werkruimtes</button>
         </div>
       </div>
     </div>
