--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <div class="search-box">
-        <i class="bx bx-search"></i>
+        <i class="bx bx-search">🔎</i>
         <input type="text" placeholder="zoek in de site" />
       </div>
 
