--- a/boek.html
+++ b/boek.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="styles/boek.css" />
   </head>
   <body>
+    <div class="header">Oba</div>
+
     <div class="container">
-      <div class="header">
-        <header>Oba</header>
-      </div>
       <div class="boek-img">
         <img src="boek 1.jpeg" alt="" class="image-boek" />
       </div>
@@ -22,9 +21,17 @@
           maar ook gevoelig, briljant en dol op Lily. De opbloeiende nieuwe
           relatie brengt herinneringen terug aan Atlas, haar eerste liefde.
         </p>
+
+        <div class="footer">
+          <ul>
+            <li>dsgsdg</li>
+            <li>gvggg</li>
+            <li>dsgsh</li>
+          </ul>
+        </div>
+
+        <button class="button">Reserveren</button>
       </div>
     </div>
-
-    <div class="footer"></div>
   </body>
 </html>
