--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header class="container">
       <button class="btn-uitlog">uitloggen</button>
-      <h1 class="logo">mijn.Oba</h1>
+      <h1 class="logo">Oba</h1>
     
       <h3>mijn bibliotheek</h3>
       
