--- a/profile.html
+++ b/profile.html
@@ -22,32 +22,32 @@
       <div class="images">
         <div class="image-box" data-name="Mijn abonnement">
           <img src="achtergrond-grijs.jpeg" alt="" />
-          <button class="btn">Abonnement</button>
+          <button class="btn">abonnement</button>
         </div>
 
         <div class="image-box" data-name="Leeromgeving">
           <img src="achtergrond-grijs.jpeg" alt="" />
-          <button class="btn">Leeromgeving</button>
+          <button class="btn">leeromgeving</button>
         </div>
 
         <div class="image-box" data-name="Skills Passpoort">
           <img src="achtergrond-grijs.jpeg" alt="" />
-          <button class="btn">Skills Passport</button>
+          <button class="btn">skills paspoort</button>
         </div>
 
         <div class="image-box" data-name="Boekentips">
           <img src="achtergrond-grijs.jpeg" alt="" />
-          <button class="btn">Boekentips</button>
+          <button class="btn">boekentips</button>
         </div>
 
         <div class="image-box" data-name="Tickets">
           <img src="achtergrond-grijs.jpeg" alt="" />
-          <button class="btn">Tickets</button>
+          <button class="btn">tickets & events</button>
         </div>
 
         <div class="image-box" data-name="Werkruimtes">
           <img src="achtergrond-grijs.jpeg" alt="" />
-          <button class="btn">Werkruimtes</button>
+          <button class="btn">studieruimtes</button>
         </div>
       </div>
     </div>
