--- a/profile.html
+++ b/profile.html
@@ -8,8 +8,14 @@
     <title>Document</title>
   </head>
 
-  <h1>oba</h1>
-  <h2>Welkom Arexan Kheyrdoon</h2>
+  <div id="“logo”">
+    <img
+      src="styles/images/oba_logo_kort_roodh.jpeg"
+      alt="logo"
+      class="logo-img"
+    />
+  </div>
+  <h2>mijn Oba</h2>
   <button class="btn">Reserveringen</button>
 
   <body>
