--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <header class="header-container">
       <button class="btn-uitlog">Uitloggen</button>
+      <button class="btn">Reserveringen</button>
 
       <div id="“logo”">
         <img
