--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <div class="search-box">
           <i class="bx bx-search"></i>
-          <input type="text" placeholder="zoek boek" />
+          <input type="text" placeholder="zoek " />
         </div>
       </nav>
     </header>
@@ -160,7 +160,7 @@
       </div>
     </div>
     <!-- book 5-->
-    <div class="card">
+    <!--<div class="card">
       <div class="image-content">
         <span class="overlay"></span>
 
@@ -174,8 +174,9 @@
 
         <button class="button">meer info</button>
       </div>
-    </div>
+    </div>-->
     <!-- book 6-->
+      <!--<div class="image-content">
     <div class="card">
       <div class="image-content">
         <span class="overlay"></span>
@@ -190,9 +191,9 @@
 
         <button class="button">meer info</button>
       </div>
-    </div>
+    </div>-->
     <!-- book7-->
-    <div class="card">
+    <!--<div class="card">
       <div class="image-content">
         <span class="overlay"></span>
 
@@ -206,11 +207,10 @@
 
         <button class="button">meer info</button>
       </div>
-    </div>
+    </div>-->
 
     <!-- book 8-->
-      <!--<div class="image-content">
-        <span class="overlay"></span>
+        <!--<span class="overlay"></span>
 
         <div class="card-image">
           <img src="styles/images/images-1.jpg" alt="" class="card-img" />
@@ -228,9 +228,19 @@
     <div class="flex-container">
       <div class="gallery">
         <div class="gallery-item">
+          <h3>evenementen oktober 2022</h3>
           <img
             class="gallery-image"
-            src="styles/images/achtergrond-grijs.jpeg"
+            src="styles/images/istockphoto-1433582776-612x612.jpeg"
+            alt="evenmenten"
+          />
+        </div>
+
+        <div class="gallery-item">
+          <h3>e-boeken en luisterboeken</h3>
+          <img
+            class="gallery-image"
+            src="styles/images/audioistockphoto-1415618685-612x612.jpeg"
             alt="grijs vlak leeg"
           />
         </div>
@@ -243,15 +253,7 @@
           />
         </div>
 
-        <div class="gallery-item">
-          <img
-            class="gallery-image"
-            src="styles/images/achtergrond-grijs.jpeg"
-            alt="grijs vlak leeg"
-          />
-        </div>
-
-        <div class="gallery-item">
+        <!--<div class="gallery-item">
           <img
             class="gallery-image"
             src="styles/images/achtergrond-grijs.jpeg"
@@ -275,9 +277,13 @@
           />
         </div>
       </div>
-    </div>
+    </div>-->
 
     <!--Footer-->
+
+    <br>
+    <br>
+    <br>
     <footer>
       <div class="footer-content-wrapper">
         <div class="footer-col large-25 small-50 tiny-100 ta-l flt">
