--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <header class="header-container">
       <button class="btn-uitlog">Uitloggen</button>
-      <button class="btn">Reserveringen</button>
+      <button class="btn-reservering">Reserveringen</button>
 
       <div id="“logo”">
         <img
@@ -23,10 +23,9 @@
           class="logo-img"
         />
       </div>
-
+      <h2>welkom arexan kheyrdoon</h2>
       <nav>
-        <h2>welkom arexan kheyrdoon</h2>
-
+      
         <ul>
           <li><a href="#">mijn gegevens</a></li>
           <li><a href="#">reserveren</a></li>
@@ -35,12 +34,13 @@
           <li><a href="#">leeromgeving</a></li>
           <li><a href="#">studieruimte reserveren</a></li>
         </ul>
+      </nav>
 
         <div class="search-box">
           <i class="bx bx-search"></i>
           <input type="text" placeholder="zoek " />
         </div>
-      </nav>
+      
     </header>
 
     <!-- Container gelezen boeken -->
@@ -143,7 +143,7 @@
         <button class="button">meer info</button>
       </div>
     </div>
-    <!-- book 4-->
+    <!-- book 4
     <div class="card">
       <div class="image-content">
         <span class="overlay"></span>
@@ -158,7 +158,7 @@
 
         <button class="button">meer info</button>
       </div>
-    </div>
+    </div>-->
     <!-- book 5-->
     <!--<div class="card">
       <div class="image-content">
@@ -245,13 +245,13 @@
           />
         </div>
 
-        <div class="gallery-item">
+        <!--<div class="gallery-item">
           <img
             class="gallery-image"
             src="styles/images/achtergrond-grijs.jpeg"
             alt="grijs vlak leeg"
           />
-        </div>
+        </div>-->
 
         <!--<div class="gallery-item">
           <img
