--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       
       <nav>
-        <h2>welkom arexan kheyrdoon</h2>
+        <h2>welkom [naam lid]</h2>
         <ul>
           <li><a href="#">mijn gegevens</a></li>
           <li><a href="#">reserveren</a></li>
