--- a/new.html
+++ b/new.html
@@ -103,10 +103,10 @@
     </div>
 
     <!--carousel slider-->
+    <div class="carousel-container">
+      <h2>aanbevelingen</h2>
 
-    <h2>aanbevelingen</h2>
-    <div class="container">
-      <div class="slider">
+      <div class="carousel">
         <div class="box1">
           <button class="carousel" type="button">boeken</button>
         </div>
