--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       
 
         <div class="search-box">
-          <i class="bx bx-search"></i>
+          <iac class="bx bx-search"></i>
           <input type="text" placeholder="zoek " />
         </div>
       </nav>
